# usdcat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cube.usda  main.cpp  main.py  run.sh
.github/workflows/: build.yml
include/: delegate.h  frame_timer.h  mesh.h  mesh_loader.h  render_pass.h  render_task.h  renderer.h  screen.h
src/: delegate.cpp  frame_timer.cpp  main.cpp  mesh.cpp  mesh_loader.cpp  render_pass.cpp  renderer.cpp  screen.cpp
